Aggiornato frontend
